// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicTacToe Victory 1 - side 1`] = `
X|X|X
O|O|-
-|-|-
`;

exports[`TicTacToe Victory 2 - up/down 1`] = `
X|O|-
O|X|-
-|-|X
`;

exports[`TicTacToe Victory 3 - diagonal 1 1`] = `
X|O|-
-|X|O
-|-|X
`;

exports[`TicTacToe Victory 3 - diagonal 2 1`] = `
-|-|O
-|O|-
O|-|-
`;

exports[`TicTacToe makeTurn(2,3,X) test 1`] = `
-|-|X
-|-|-
-|-|-
`;
